manifests/ingress/monitoring-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "monitoring-static-ip"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
  labels:
    name: monitoring
spec:
  tls:
  - secretName: monitoring-lukeaddison-tls
    hosts:
    - prometheus.socks.lukeaddison.co.uk
    - grafana.socks.lukeaddison.co.uk 
    - kibana.socks.lukeaddison.co.uk
  rules:
  - host: prometheus.socks.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  - host: grafana.socks.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: kibana.socks.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
